project(AlgorithmBOX_DP)
cmake_minimum_required(VERSION 3.6)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe -O2 -std=c++14")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe -g -std=c++14")

#if(0)

# PointsCoverSorted.cpp
set(PointsCoverSorted_SRC PointsCoverSorted.cpp)
add_executable(PointsCoverSorted ${PointsCoverSorted_SRC})

#endif(0)





